executable ('zynqmp_vcu_encode',
sources : ['test-vcu-encode.c'],
c_args : gst_omx_args,
include_directories : [configinc],
dependencies : [gst_dep, gstvideo_dep]
)

executable ('zynqmp_sei_extraction',
sources : ['test-sei-extraction.c'],
c_args : gst_omx_args,
include_directories : [configinc],
dependencies : [gst_dep]
)
